# social-app

./: .dockerignore  .env  .env-non-dev  .env-render  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  social.db
alembic/: env.py
alembic/versions/: 2024_09_07_1836-52001dc75deb_comments.py  2024_09_08_1349-39cbc61b2fa4_comments.py  2024_09_09_1655-a522ef90e5cc_images.py  2024_09_09_1659-57348a0b6088_images2.py  2024_09_16_2301-b4322b330120_likes.py  2aefc391ac32_initial.py  6b1aeb2ad53c_migrations.py  7b1466459123_initial.py  958f4a2d5a25_hz.py  b1449bff1812_fixes.py  cc0a0984a819_migrate.py  e5e995be261f_author.py  f219e6ad6146_subscribers.py  fc7824258318_initial_migration.py  fd643e59c0ce_initial.py
app/: database.py  models.py  user.py
app/models/: models.py  user.py
app/posts/: routers.py  schemas.py  services.py
app/routers/: user.py
app/schemas/: profile.py  user.py
app/security/: password.py  services.py  token.py
app/services/: auth.py  user.py
app/subscription/: routers.py
app/users/: models.py  routers.py  schemas.py  services.py
docker/: app.sh
src/: config.py  database.py  main.py
src/comments/: models.py  routers.py  schemas.py  services.py
src/images/: models.py  routers.py  schemas.py  services.py
src/likes/: models.py  routers.py  schemas.py  services.py
src/pages/: routers.py
src/posts/: models.py  routers.py  schemas.py  services.py
src/security/: services.py  token.py  token_schema.py
src/static/: style.css
src/templates/: base.html  (+6 more)
(+17 files in other folders)
