[tool.poetry]
name = "social-app"
version = "0.1.0"
description = ""
authors = ["Lisaveta Yurashevich <vinogradova.lisaveta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
pydantic = {extras = ["email"], version = "^2.8.2"}
alembic = "^1.13.2"
passlib = "^1.7.4"
python-slugify = "^8.0.4"
bcrypt = "4.0.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
gunicorn = "^23.0.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
